Only re-initialize statics if fields have been added or the type has changed
Fixes #15